--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3248,7 +3248,7 @@ input, select, textarea {
 		}
 
 		.wrapper.style2 {
-			background-color: #61a6ab;
+			background-color: #b3a2cf;
 		}
 
 		.wrapper.style2-alt {
@@ -3256,7 +3256,7 @@ input, select, textarea {
 		}
 
 		.wrapper.style3 {
-			background-color: #d692a0;
+			background-color: #bd6f80;
 		}
 
 		.wrapper.style3-alt {
