--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2552,7 +2552,7 @@ input, select, textarea {
 				}
 
 				.wrapper.style3 .icon.major:before {
-					color: #61A6AB;
+					color: #b3a2cf;
 				}
 
 				.wrapper.style3-alt .icon.major:before {
@@ -3248,7 +3248,7 @@ input, select, textarea {
 		}
 
 		.wrapper.style2 {
-			background-color: #b3a2cf;
+			background-color: #61A6AB;
 		}
 
 		.wrapper.style2-alt {
